improving main notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,67 +1,103 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d8f88aa",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/DivyanshuGangwar/multi_user_financial_chatbot.git"
+      ],
+      "metadata": {
+        "id": "mzBOiNFQ1rd5"
+      },
+      "id": "mzBOiNFQ1rd5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd multi_user_financial_chatbot"
+      ],
+      "metadata": {
+        "id": "k27kiOM60zjF"
+      },
+      "id": "k27kiOM60zjF",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3d8f88aa",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "3d8f88aa"
+      },
+      "outputs": [],
+      "source": [
+        "%pip install -r requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c396dbec",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "c396dbec"
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from google.colab import userdata\n",
+        "from data_loader import populate_doc_paths\n",
+        "\n",
+        "os.environ[\"GROQ_API_KEY\"] = userdata.get('groq_api_key')\n",
+        "NO_OF_USERS = 4\n",
+        "\n",
+        "DOC_PATHS = {\n",
+        "    \"Session_1\":'/content/multi_user_financial_chatbot/data/Company_A_stmt.png',\n",
+        "    \"Session_2\":'/content/multi_user_financial_chatbot/data/Company_B_stmt.png',\n",
+        "    \"Session_3\":'/content/multi_user_financial_chatbot/data/Company_C_stmt.png',\n",
+        "    \"Session_4\":'/content/multi_user_financial_chatbot/data/Company_D_stmt.png',\n",
+        "\n",
+        "}\n",
+        "\n",
+        "populate_doc_paths(DOC_PATHS)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from session_manager import GradioSessionsManager\n",
+        "\n",
+        "# main function to run\n",
+        "setup_obj = GradioSessionsManager()\n",
+        "setup_obj.create_setups(NO_OF_USERS)"
+      ],
+      "metadata": {
+        "id": "xl7bsJx5FTwn"
+      },
+      "id": "xl7bsJx5FTwn",
+      "execution_count": null,
+      "outputs": []
     }
-   },
-   "outputs": [],
-   "source": [
-    "%pip install -U requirements.txt"
-   ]
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c396dbec",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "from session_manager import GradioSessionsManager\n",
-    "\n",
-    "os.environ[\"GROQ_API_KEY\"] = userdata.get('groq_api_key')\n",
-    "NO_OF_USERS = 4\n",
-    "\n",
-    "DOC_PATHS = {\n",
-    "    \"Session_1\":'/content/data/Company_A_stmt.png',\n",
-    "    \"Session_2\":'/content/data/Company_B_stmt.png',\n",
-    "    \"Session_3\":'/content/data/Company_C_stmt.png',\n",
-    "    \"Session_4\":'/content/data/Company_D_stmt.png',\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "570caff2",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# main function to run \n",
-    "setup_obj = GradioSessionsManager()\n",
-    "setup_obj.create_setups(NO_OF_USERS)"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
